--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         }
 
         .google-search:focus {
-            border-color: #4d90fe;
-            box-shadow: 0 0 5px rgba(1, 12, 29, 0.185);
+            border-color: #0105ff;
+            box-shadow: 0 0 5px rgba(1, 12, 29, 0.35);
             outline: none;
         }
 
